--- a/src/main/webapp/config.json
+++ b/src/main/webapp/config.json
@@ -1,1 +1,1 @@
-{"baseUrl":"http://172.16.49.78:10080/run-d18v5xnccj/TESTMOBILE","buildMode":"DEV"}
+{"baseUrl":"https://dev-studio.wavemakeronline.com/run-871gz1yz80/TESTMOBILE87","buildMode":"DEV"}
