--- a/src/main/webapp/WEB-INF/data/hrdb.properties
+++ b/src/main/webapp/WEB-INF/data/hrdb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.3
-#Wed Nov 04 14:09:14 UTC 2015
+#Mon Nov 16 09:49:29 UTC 2015
 version=2.3.3
-modified=no
+modified=yes
 tx_timestamp=0
