New files added - Files modified - [page.min.html,CameraPictureVar.html,leftnav.variables.json,page.min.html,GeoLocation.variables.json,wm-libs.min.js,scanBarcode.variables.json,page.min.html,page.min.html,Login.variables.json,page.min.html,fileUploadVar.variables.json,db-connection-settings.json,fileUploadWid.variables.json,Device.variables.json,page.min.html,page.min.html,.wmproject.properties,hrdb.log,fileUploadWid.html,CaptureVideoVar.variables.json,hrdb.spring.xml,wm-mobileloader.min.js,page.min.html,page.min.html,captureVideoWid.variables.json,wm-style.css,page.min.html,CameraPictureVar.js,AppInfo.variables.json,Calendar.variables.json,CameraPictureVar.variables.json,page.min.html,login.html,Contacts.html,user-web.xml,hrdb_API.json,project-security-provider.xml,page.min.html,hrdb.properties,config.xml,app.variables.json,Main.variables.json,production.properties,page.min.html,Contacts.variables.json,mediaList.variables.json,CaptureVideoVar.html,hrdb.properties,pom.xml,page.min.html,index.html,page.min.html,development.properties] Refactored files - [] Fixed bugs - [] Removed files - [Contacts-3.apk,roles.json,demo-options.json,1450782600748.jpg,TESTMOBILE134214310.apk,1450682037937.jpg,general-options.json,TESTMOBILE13421431.apk,1450157141663.jpg,TESTMOBILE.apk,mobi.apk]

--- a/services/hrdb/src/hrdb.properties
+++ b/services/hrdb/src/hrdb.properties
@@ -1,11 +1,14 @@
-#Database connection properties.
-#Fri Sep 25 16:37:06 IST 2015
+#adding jndi properties
+#Wed Dec 23 06:08:27 UTC 2015
 hrdb.packageName=com.hrdb
 hrdb.serviceId=hrdb
 hrdb.url=${db.hrdb.url}
 hrdb.impersonateUser=false
-hrdb.username=${db.hrdb.username}
+hrdb.dataSourceType=${db.hrdb.dataSourceType}
 hrdb.hbm2ddl=${db.hrdb.hbm2ddl}
+hrdb.username=${db.hrdb.username}
+hrdb.jndiName=${db.hrdb.jndiName}
+hrdb.maxPageSize=${db.hrdb.maxPageSize}
 hrdb.tableFilter=DEPARTMENT,EMPLOYEE,USER,VACATION
 hrdb.driverClass=org.hsqldb.jdbcDriver
 hrdb.password=${db.hrdb.password}
