--- a/src/main/webapp/WEB-INF/data/hrdb.properties
+++ b/src/main/webapp/WEB-INF/data/hrdb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.3
-#Mon Nov 16 09:52:58 UTC 2015
+#Wed Dec 30 09:15:18 UTC 2015
 version=2.3.3
-modified=yes
+modified=no
 tx_timestamp=0
