--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.wavemaker.project</groupId>
-    <artifactId>TESTMOBILE</artifactId>
+    <artifactId>TESTMOBILE87</artifactId>
     <packaging>war</packaging>
     <version>1.0</version>
     <build>
@@ -16,7 +16,7 @@
                 <directory>src/main/resources</directory>
             </resource>
         </resources>
-        <finalName>TESTMOBILE</finalName>
+        <finalName>TESTMOBILE87</finalName>
         <filters>
             <filter>profiles/${profile.props.file}/</filter>
         </filters>
