--- a/profiles/production.properties
+++ b/profiles/production.properties
@@ -1,5 +1,9 @@
-#Fri Sep 25 16:37:06 IST 2015
+#
+#Wed Dec 23 06:08:27 UTC 2015
 db.hrdb.hbm2ddl=none
+db.hrdb.jndiName=
 db.hrdb.username=sa
 db.hrdb.url=jdbc\:hsqldb\:file\:{WebAppRoot}/WEB-INF/data/hrdb;shutdown\=true;ifexists\=true;hsqldb.lock_file\=false;
+db.hrdb.maxPageSize=100
+db.hrdb.dataSourceType=WM_MANAGED_DATASOURCE
 db.hrdb.password=7b6a43524a78700d662158
