--- a/src/main/webapp/pages/AppInfo/AppInfo.variables.json
+++ b/src/main/webapp/pages/AppInfo/AppInfo.variables.json
@@ -1,24 +1,25 @@
 {
-	"appInfo": {
-		"owner": "Page",
-		"dataSet": {
-			"appversion": "X.X.X",
-			"cordovaversion": "X.X.X"
-		},
-		"dataBinding": {},
-		"service": "device",
-		"operation": "getAppInfo",
-		"startUpdate": true,
-		"imageQuality": 80,
-		"imageEncodingType": "0",
-		"allowImageEdit": false,
-		"correctOrientation": true,
-		"saveToPhotoAlbum": false,
-		"geolocationHighAccuracy": true,
-		"geolocationMaximumAge": 3,
-		"geolocationTimeout": 5,
-		"vibrationtime": 2,
-		"category": "wm.DeviceVariable",
-		"_id": "wm-appInfo-wm.DeviceVariable-1443148918288"
-	}
+  "appInfo" : {
+    "geolocationTimeout" : 5,
+    "saveToPhotoAlbum" : false,
+    "geolocationMaximumAge" : 3,
+    "startUpdate" : true,
+    "correctOrientation" : true,
+    "dataSet" : {
+      "appversion" : "X.X.X",
+      "cordovaversion" : "X.X.X"
+    },
+    "imageEncodingType" : "0",
+    "operation" : "getAppInfo",
+    "category" : "wm.DeviceVariable",
+    "vibrationtime" : 2,
+    "allowImageEdit" : false,
+    "geolocationHighAccuracy" : true,
+    "dataBinding" : { },
+    "_id" : "wm-appInfo-wm.DeviceVariable-1443148918288",
+    "name" : "appInfo",
+    "service" : "device",
+    "owner" : "Page",
+    "imageQuality" : 80
+  }
 }
